tests/rosetta/transpiler/C/bernoulli-numbers.c
// Generated by Mochi 0.10.32 on 2025-07-27 18:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

int bernoulli(int n);
const char* padStart(const char* s, int width, const char* pad);
int main(void);

int bernoulli(int n) {
    int *a = NULL;
    size_t a_len = 0;
    int m = 0;
    while (m <= n) {
        a = list_append_int(a, &a_len, 1 / (m + 1));
        int j = m;
        while (j >= 1) {
            a[j - 1] = j * (a[j - 1] - a[j]);
            j = j - 1;
        }
        m = m + 1;
    }
    return a[0];
}

const char* padStart(const char* s, int width, const char* pad) {
    const char* out = s;
    while (strlen(out) < width) {
        out = str_concat(pad, out);
    }
    return out;
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        for (int i = 0; i < 61; i++) {
            int b = bernoulli(i);
            if (num(b) != 0) {
                const char* numStr = str_int(num(b));
                const char* denStr = str_int(denom(b));
                puts(str_concat(str_concat(str_concat(str_concat(str_concat("B(", padStart(str_int(i), 2, " ")), ") ="), padStart(numStr, 45, " ")), "/"), denStr));
            }
        }
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
